--- a/site.yml
+++ b/site.yml
@@ -1,12 +1,33 @@
 ---
 - name: Provision Demo Environment
   hosts: all
-  become: true
+  gather_facts: false
+  roles:
+  - vagrant-common
+
+- name: Install OpenLDAP
+  hosts: openldap
+  roles:
+  - openldap
+
+- name: Install ELK
+  hosts: elk
+  roles:
+  - geerlingguy.java
+  - geerlingguy.elasticsearch
+  - geerlingguy.logstash
+  - geerlingguy.kibana
+
+- name: Install and provision Ansible Tower
+  hosts: tower
   vars:
     towerpass: password1
-    ldaplicense: False
-
   roles:
-    - { role: vagrant-common, when "'tag_Vagrant_True' in group_names" }
-    - { role: openldap, when: "'tag_Name_ldapvm' in group_names and ldaplicense == True" }
-    - { role: tower, when: "'tag_Name_Tower' in group_names" }
+  - tower  
+
+- name: 
+
+#  roles:
+#    - { role: vagrant-common, when "'tag_Vagrant_True' in group_names" }
+#    - { role: openldap, when: "'tag_Name_ldapvm' in group_names and ldaplicense == True" }
+#    - { role: tower, when: "'tag_Name_Tower' in group_names" }
