--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,3 @@
-- geerlingguy.elasticsearch
-- geerlingguy.logstash
-- geerlingguy.kibana
+- src: geerlingguy.elasticsearch
+- src: https://github.com/bleung/ansible-role-logstash.git
+- src: geerlingguy.kibana
