--- a/roles/tower/tasks/main.yml
+++ b/roles/tower/tasks/main.yml
@@ -65,6 +65,25 @@
     validate_certs: False
     force_basic_auth: yes
 
+- name: create log aggregation config
+  uri:
+    url: https://localhost/api/v2/settings/logging/
+    method: PUT
+    user: admin
+    password: "{{ towerpass }}"
+    body: "{{ lookup('file', 'tower_logging_config.json') }}"
+    body_format: json
+    validate_certs: False
+    force_basic_auth: yes
+    status_code:
+      - 200
+      - 201
+    register: response
+    until: response.status == 200 or response.status == 201
+    retries: 10
+    delay: 30
+    changed_when: response.status == 200 or response.status == 201
+
 - name: copy ansible hosts file
   template:
     src: "vagrant_hosts"
