--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,3 @@
-- src: geerlingguy.elasticsearch
-- src: https://github.com/bleung/ansible-role-logstash.git
-- src: geerlingguy.kibana
+# - src: geerlingguy.elasticsearch
+# - src: https://github.com/bleung/ansible-role-logstash.git
+# - src: geerlingguy.kibana
